fixed overflow
gn

--- a/DD/wwwroot/Styles/styles.css
+++ b/DD/wwwroot/Styles/styles.css
@@ -83,7 +83,10 @@ body {
 }
 
 /* Add your custom styles here */
-
+.row{
+    margin-left: 0;
+    margin-right: 0;
+}
 /* Video embed */
 /* Styles for desktop */
 .video-embed {
